# fledge-plugin-speedtest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  fledge.toml  plugin.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: main.rs
