[package]
name = "fledge-plugin-speedtest"
version = "0.1.2"
edition = "2021"
rust-version = "1.89"
description = "Measure download and upload bandwidth via Cloudflare's speed test endpoints."
license = "MIT"
authors = ["0xLeif"]
repository = "https://github.com/CorvidLabs/fledge-plugin-speedtest"

[[bin]]
name = "fledge-speedtest"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
